[package]
name = "units-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt", "macros"] }
warp = "*"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

